# raylib-clay-template

./: .gitignore  CMakeLists.txt  build.sh  build_web.sh  install_emscripten.sh  makefilefix.sh  run.sh  run_web.sh
.github/workflows/: web.yml
include/: arena.h  array.h  arrayrep.h  assert.h  atlas.h  except.h  game.h  mem.h  menu.h  raylib.h  raymath.h  screen.h  stack.h  table.h
include/components/: map.h
src/: arena.c  array.c  assert.c  atlas.c  except.c  main.c  stack.c  table.c
